Fixed some problems with imgs not showing up

--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,6 +1,5 @@
 .bigImg {
     position: relative;
-    background-image: url(/img/scuba2.jpg);
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
